lspclient: check for capability before using documentSymbol

BUG: 479496